# telonyx-cinema-bot

./: .env.example  .gitignore  Dockerfile  README.md  migrate_news.py  pyproject.toml  railway.json
scripts/: auth_tiktok.py  patch_tiktok_library.py
telonyx_cinema_bot/: __main__.py  config.py  db.py  models.py  scheduler.py  web.py
telonyx_cinema_bot/bot/: handlers.py  publisher.py
telonyx_cinema_bot/services/: campaign.py  content.py  dates.py  downloads.py  editorial.py  formatting.py  gemini.py  groq.py  movie_card.py  news.py  omdb.py  overlay.py  shorts.py  tiktok.py  tiktok_uploader.py  tmdb.py
telonyx_cinema_bot/tiktok_cookies/: TK_cookies_atatatatratata2@gmail.com.json
tests/: test_content_service.py  test_dates.py  test_editorial_service.py  test_formatting.py  test_handlers.py  test_news_service.py
