[project]
name = "telonyx-cinema-bot"
version = "0.1.0"
description = "Telegram content engine for TELONYX CINEMA."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "aiohttp>=3.9,<4",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "feedparser>=6.0.12",
    "google-genai>=1.0,<2",
    "openai>=1.0,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "yt-dlp>=2025.0",
    "tzdata",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
